Added links to projects

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
   <head>
     <title>
-      Github are amazing!
+      DrJCampbell's Projects
     </title>
   </head>
   <body>
-    <h1>Github are amazing</h1>
+    <h1>DrJCampbell's Projects</h1>
     <p>
-      it's like Geocities with git.
+      Links to project pages:
     </p>
+    <ul>
+    	<li><a href="https://github.com/DrJCampbell/genexdrugdemo">geneXdrugDemo</a></li>
+    	<li><a href="https://github.com/DrJCampbell/icr-intercell-analysis">Fucntions used for Intercell project</a></li>
+    	<li><a href="https://github.com/DrJCampbell/shalign">shALIGN code</a></li>
+    </ul>
   </body>
+</html>
