--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>
       DrJCampbell's Projects
     </title>
+    <link rel="stylesheet" type="text/css" media="screen"  href="drjcampbell.github.io/style.css" />
   </head>
   <body>
     <h1>DrJCampbell's Projects</h1>
@@ -11,7 +12,7 @@
     </p>
     <ul>
     	<li><a href="https://github.com/DrJCampbell/genexdrugdemo">geneXdrugDemo</a></li>
-    	<li><a href="https://github.com/DrJCampbell/icr-intercell-analysis">Fucntions used for Intercell project</a></li>
+    	<li><a href="https://github.com/DrJCampbell/icr-intercell-analysis">Functions used for Intercell project</a></li>
     	<li><a href="https://github.com/DrJCampbell/shalign">shALIGN code</a></li>
     </ul>
   </body>
