--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
       DrJCampbell's Projects
     </title>
-    <link rel="stylesheet" type="text/css" media="screen"  href="https://github.com/DrJCampbell/DrJCampbell.github.io/blob/master/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen"  href="https://DrJCampbell.github.io/DrJCampbell/style.css" />
   </head>
   <body>
     <h1>DrJCampbell's Projects</h1>
