--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     	<li><a href="https://github.com/DrJCampbell/icr-intercell-analysis">Functions used for Intercell project</a></li>
     	<li><a href="https://github.com/DrJCampbell/shalign">shALIGN code</a></li>
       <li>Hello world!</li>
+      <li>Cheerio</li>
     </ul>
   </body>
 </html>
