--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     	<li><a href="https://github.com/DrJCampbell/shalign">shALIGN code</a></li>
       <li>Hello world!</li>
       <li>Cheerio</li>
+      <li>C'est la vie'</li>
     </ul>
   </body>
 </html>
